@startuml
!include style.puml
show members
hide empty methods
hide empty fields
skinparam ClassFontColor #000000
skinparam ClassBorderColor #000000

title Appointment Subsystem

package "Appointments\n Subsystem" {
    class Appointment {
        name: Name
        startDateTime: StartDateTime
        duration: Duration
        person: Person
    }

    class DisjointAppointmentList {
        add()
        setAppointment()
        remove()
    }

    class Schedule {
        addAppointment()
        setAppointment()
        removeAppointment()
        getAppointmentList()
    }

    class "<<interface>>\n ReadOnlySchedule" as ReadOnlySchedule {
        getAppointmentList()
    }
}

class ModelManager
class "External Class" as External

Schedule "1  "*-down->"1  " DisjointAppointmentList
Schedule -right-|> ReadOnlySchedule
DisjointAppointmentList "*"-right->"*" Appointment
ModelManager -down-> Schedule
External -left-> ModelManager
External ..> ReadOnlySchedule

@enduml
